{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterMove",
            "id": "2874ed7d-0ae9-447e-ad72-4226c2ae7ed8",
            "actions": [
                {
                    "name": "Activity",
                    "type": "Button",
                    "id": "a36288be-9c0e-421f-9d94-461c26a9a88e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction_Item",
                    "type": "Button",
                    "id": "00f3efed-a7a3-4773-8ee1-13b1b89a27d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b41a9af8-908b-4d07-8cc4-79d3cee7c9a7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction_Place",
                    "type": "Button",
                    "id": "2db08ba2-3dff-4469-9786-093a5605b1b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d492bb15-170e-4063-a1ed-bbfcda6ea9f0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Activity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb32017b-71f2-4cca-bb7d-8ccf8f213af3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Interaction_Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "09d00463-eff9-4338-9602-aa5ed6d0131c",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aa78e49d-9af9-4d36-8705-0b365c74b502",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "11afa382-6347-455c-b392-e4a7abb1a97f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d976dfdd-a576-40ae-8a3c-af92b2c5a7ca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5855e2ec-844e-459d-ac71-0b4532add2cd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "d2a3daec-0adf-4ebc-8ea2-a1bccee74cee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "28e399bd-7297-4070-b13d-caf53441cb12",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "de0a7d30-f966-4f97-a979-20294dc302c5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction_Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoardAndMouse",
            "bindingGroup": "KeyBoardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}